Only update the palette once for the change event belonging to qApp.

This fixes the massive freeze that occurs when the global color
palette is changed. Note that the qApp event filter includes change
events to many objects, but we only want to update once.

BUG: 358526